[package]
name = "wasm_module"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.140"
serde-wasm-bindgen = "0.4"
reqwest = { version = "0.11", features = ["json"] }
js-sys = "0.3"
